Ensure there's enough contrast to read the text when the mouse is dropping over the attachment widget. Experimentally relable the Remove button as X.
FossilOrigin-Name: 05865c2310b5d4866a96317b7e2dd546a6ad4cf056c84c6c0c1e1b9e819630f8

--- a/src/default.css
+++ b/src/default.css
@@ -2060,6 +2060,7 @@ body.fossil-dark-style .attach-widget .attach-dropzone.populated{
 }
 .attach-widget .attach-dropzone.dragover {
   background-color: #e1f5fe;
+  color: black;
   border-color: #03a9f4;
 }
 body.fossil-dark-style .attach-widget .attach-dropzone.dragover{
@@ -2100,6 +2101,7 @@ body.fossil-dark-style  .attach-widget .attach-dropzone.dragover{
   border: none;
   border-radius: 0.25em;
   cursor: pointer;
+  font-weight: bold;
 }
 .attach-widget .attach-row-remove:hover {
   background-color: #b71c1c;
